force-app/main/default/objects/OpportunityLineItem/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Condition(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>