force-app/main/default/objects/OpportunityLineItem/fields/Labor_Charge__c.field-meta.xml
<CustomField>
    <fullName>Labor_Charge__c</fullName>
    <label>$ Total Labor</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>