force-app/main/default/objects/OpportunityLineItem/fields/longDescription__c.field-meta.xml
<CustomField>
    <fullName>longDescription__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>