force-app/main/default/objects/OpportunityLineItem/fields/Price_w_o_Labor__c.field-meta.xml
<CustomField>
    <fullName>Price_w_o_Labor__c</fullName>
    <label>Non-Labor $</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>