force-app/main/default/objects/OpportunityLineItem/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <defaultValue>&quot;Any&quot;</defaultValue>
    <label>Product Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>