force-app/main/default/objects/OpportunityLineItem/fields/Product_on_RFP_Editable__c.field-meta.xml
<CustomField>
    <fullName>Product_on_RFP_Editable__c</fullName>
    <label>Product on RFP (Editable)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>