force-app/main/default/objects/OpportunityLineItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Takeoff</fullName>
                <default>true</default>
                <label>Takeoff</label>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>Needs Markup</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>