force-app/main/default/objects/OpportunityLineItem/fields/Units_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Units_of_Measure__c</fullName>
    <label>Units of Measure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>